--- a/index.html
+++ b/index.html
@@ -15,26 +15,23 @@
       -ms-text-size-adjust: 100%;
       -webkit-text-size-adjust: none;
     }
-    body { margin: 0; font-size: 14px; line-height: 1.61; font-weight: 400; }
-    body, button, input, select, textarea { font-family: 'Open Sans', sans-serif; color: #333; }
+    body {
+      margin: 0; font-size: 14px; line-height: 1.61; font-weight: 400;
+      font-family: 'Open Sans', sans-serif; color: #333;
+       background: #fff;
+    }
 
-    a { color: #12C; }
     a:visited { color: #61C; }
     a:focus { outline: thin dotted; }
     a:hover, a:active { color: #c00; outline: 0; }
 
-    b, strong { font-weight: bold; }
-    pre, code { font-family: monospace, monospace; font-size: 1em; }
-    ul, ol { margin: 1em 0; padding: 0 0 0 20px; }
+
+    ul{ margin: 1em 0; padding: 0 0 0 20px; }
     img { border: 0; max-width: 100%; }
 
-    body { background: #fff; }
     header, footer, .container { max-width: 45em; margin: 0 auto; }
-
     header { padding: 0 0.5em; color: #C90B0B; }
-    header img { border-radius: 40px; float: left; }
     header p { font-size:1.5em; font-weight: bold; padding-left: 4em;}
-    header p span { font-size: 0.8em; font-weight: normal;}
 
 
     .content li { list-style-type: none; font-size: 1.1em;}
@@ -47,7 +44,18 @@
     }
     footer span { float: right; font-style: italic; }
 
-      @media only screen and (max-width:480px){
+    .hero {
+      padding: 2em;
+      background-color: #f8f8f8;
+      font-size: 1.2em;
+      border: 1px 0 1px 0 solid #ccc;
+    }
+
+    .content {
+      padding: 1em;
+    }
+
+      @media only screen and (max-width: 480px){
         body {
           font-size:12px;
         }
@@ -55,14 +63,7 @@
           padding-left:4.5em;
         }
       }
-      .hero { padding: 2em; background-color: #f8f8f8; font-size:1.2em;
-        border-bottom: 1px solid #ccc;
-        border-top: 1px solid #ccc;
-      }
 
-      .content {
-        padding: 1em 1em;
-      }
     </style>
 
 
@@ -74,38 +75,38 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Debatanu Thakur<br><span>Course Developer</span></p>
+      <a href="/" style="color: #12C;"><img src="img/profilepic.jpg" style="border-radius: 40px; float: left;"></a>
+      <p>Debatanu Thakur<br><span style="font-size: 0.8em; font-weight: normal;">Course Developer</span></p>
     </header>
 
     <div class="container">
       <div class="hero">
-        <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
+        <strong style="font-weight: bold;">I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
       </div>
 
       <div class="content">
         <ul>
           <li>
             <img src="img/2048.jpg">
-            <a href="project-2048.html">Build Your Own 2048!</a>
+            <a href="project-2048.html" style="color: #12C;">Build Your Own 2048!</a>
             <p>I made my own version of 2048. How cool is that!?</p>
           </li>
 
           <li>
             <img src="img/wpo.jpg">
-            <a href="project-webperf.html">Website Performance Optimization</a>
+            <a href="project-webperf.html" style="color: #12C;">Website Performance Optimization</a>
             <p>Hey... this class looks familiar.</p>
           </li>
 
           <li>
             <img src="img/mwd.jpg">
-            <a href="project-mobile.html">Mobile Web Development</a>
+            <a href="project-mobile.html" style="color: #12C;">Mobile Web Development</a>
             <p>Making mobile apps isn't so hard after all.</p>
           </li>
 
           <li>
             <img style="width: 100px;" src="img/pizzeria.jpg">
-            <a href="views/pizza.html">Cam's Pizzeria</a>
+            <a href="views/pizza.html" style="color: #12C;">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
         </ul>
